~ v5.1.0
- Added a navigate path button
- Implemented automatic binary downloading for Linux
- Fixed an issue with list header texts being displayed incorrectly
- Made lists sort in descending order

~ v5.0.0
- MediaDownloader has been completely rewritten from scratch using the Tauri framework
- It is now cross-platform (currently it has only been tested for Windows and Linux)
- Greatly improved the UI (the UI has been redesigned from scratch with a HTML + CSS frontend, enabling a more cohesive experience)
    - The console window is now embedded
    - The window is now resizeable
    - Split common functions into separate windows
- JSON is now used for storing configuration files
- Fixed yt-dlp breaking every once in a while, yt-dlp will now be auto-updated
- Fixed incorrect FFmpeg bitrate argument injections
- Improved the auto-naming feature (it is less annoying now)

~ v4.4.1.0
- Added an option to play a sound when the download finishes, you can also specify a custom sound
- Fixed a small bug with the history re-sorting in the wrong order

~ v4.4.0.0
- Added a settings menu
- Added a QoL feature that skips the download process automatically if the raw file is detected (this is helpful if the user chose an undesired format and wants to change it without redownloading the entire video)
- Added a migration feature to prevent the loss of user config data when loading from older versions
- Greatly optimized the queue and history storage systems, it now stores each in a single compressed file
- Small UI improvements

~ v4.3.1.0
- Greatly improved the bootstrapper, it now has a nice GUI that shows progress
- Improved the update checker
- Added some config safety features, this will prevent the config manager from breaking if the user inputs a '¶' or '\n' (these two characters are used as delimiters in the config manager)

~ v4.3.0.0
- Improved the progress bar for the queue system
- Added a config option to allow only specified urls to be downloaded from