@@ -1,6 +1,3 @@
 # TODO
 
-- Make the navigate path button cross-platform
-- Fix UI visuals for Linux
-- Implement auto-update
 - Add a settings window
