@@ -1,6 +1,8 @@
 ~ v5.1.0
-- Added a navigate path button
+- Implemented an auto-updater
 - Implemented automatic binary downloading for Linux
+- Added a navigate path button
+- Fixed FFmpeg libx264 issues for Linux (now using FFmpeg gpl instead of lgpl)
 - Fixed an issue with list header texts being displayed incorrectly
 - Made lists sort in descending order
 
